--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["mkdocs_material_mark_as_read/"]
+
 [tool.setuptools.package-data]
 "*" = ["*.js", "*.css"]
 
