--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,6 @@
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-where = ["mkdocs_material_mark_as_read/"]
-
-[tool.setuptools.package-data]
-"*" = ["*.js", "*.css"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "mkdocs-material-mark-as-read"
